crates/macros/tests/ui/fail/associated_const.rs
#[fittings::service]
trait HasAssociatedConst {
    const VERSION: &'static str;

    async fn hello(&self, params: ()) -> Result<(), fittings::FittingsError>;
}

fn main() {}
